--- a/vadilations/indianmob.html
+++ b/vadilations/indianmob.html
@@ -1,13 +1,13 @@
 <html>
     <head>
-
+<title> login with vadilations</title>
     </head>
     <body>
         <form>
             <label> Mobile number::::</label>
             <input type="number"   required pattern="[6-9] [0-9] {9}"/><br><br>
             <label> user name</label>
-            <input type="text" pattern="[d] [a-ZA-Z] {n} required"/>
+            <input type="text" pattern="[d^a] [a-ZA-Z] {n} required"/><br><br>
             <input type="submit"/>
         </form>
     </body>
