--- a/HTML/Basics/login.html
+++ b/HTML/Basics/login.html
@@ -15,6 +15,8 @@
             <h1> login page</h1>
         </div>
         <form>
+            <fieldset>
+                <legend>sign up page</legend>
             <label> Email id:</label>
             <input  type="text"/>
             <br> <br>
@@ -22,6 +24,7 @@
             <input type="password"/>
             <br> <br>
             <button> login</button>
+        </fieldset>
         </form>
         
         
