--- a/assignments/Registartion.html
+++ b/assignments/Registartion.html
@@ -7,7 +7,7 @@
             <h1> Registartion details</h1>
 
         </form>
-        <label> Name</label>
+        <label>name</label>
         <input type="text"/><br><br>
         <label> 10 digit mobile number</label>
         <input type="number"/><br><br>
@@ -34,6 +34,8 @@
         <label>Address type</label>
         <input type="radio" name="XYZ"/>Home
         <input type="radio" name="XYZ"/>Office<br><br>
+        <input?>
+
 
 
     </body>
