--- a/Javascript/part 2/object/index.html
+++ b/Javascript/part 2/object/index.html
@@ -1,8 +1,14 @@
 <html>
     <head>
-        <script src="./data.js" type="text/javascript">GE</script>
+        <script src="./data.js" type="text/javascript"></script>
+
     </head>
     <body>
-
+        
     </body>
+
+
+
+
+
 </html>
