--- a/Javascript/part 2/Events/index.html
+++ b/Javascript/part 2/Events/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
        
-        <button ondblclick="display()">Click Buddy</button>
+        <button style="background-color: red"; onclick="display()">Click Buddy</button>
 
     </body>
     <script src="./data.js" type="text/javascript"></script>
