--- a/Javascript/part 2/DOM/DOM Practice/index.html
+++ b/Javascript/part 2/DOM/DOM Practice/index.html
@@ -1,15 +1,17 @@
 <html>
     <head>
-        <script src="./data.js" type="text/javascript"></script>
+        <script src="./data.js"type="text/javascript"></script>
     </head>
-    <body onload="displayUsers()">
+    <body onload="display_users()">
         <table border="2">
             <thead>
-                <th>Id</th>
+                <th>ID</th>
                 <th>Name</th>
                 <th>Gender</th>
             </thead>
-            <tbody></tbody>
+            <tbody>
+
+            </tbody>
         </table>
     </body>
 </html>
