--- a/Javascript/part 2/DOM/DOM2/index.html
+++ b/Javascript/part 2/DOM/DOM2/index.html
@@ -3,7 +3,7 @@
         <script src="./data.js" type="text/javascript"></script>
     </head>
     <body onload="displayUsers()">
-        <table border="2">
+        <table border="1"">
             <thead>
                 <th>Id</th>
                 <th>Name</th>
